log/build_2021-05-28_16-14-49/om_aiv_util/stdout_stderr.log
running egg_info
writing ../../build/om_aiv_util/om_aiv_util.egg-info/PKG-INFO
writing dependency_links to ../../build/om_aiv_util/om_aiv_util.egg-info/dependency_links.txt
writing entry points to ../../build/om_aiv_util/om_aiv_util.egg-info/entry_points.txt
writing requirements to ../../build/om_aiv_util/om_aiv_util.egg-info/requires.txt
writing top-level names to ../../build/om_aiv_util/om_aiv_util.egg-info/top_level.txt
reading manifest file '../../build/om_aiv_util/om_aiv_util.egg-info/SOURCES.txt'
writing manifest file '../../build/om_aiv_util/om_aiv_util.egg-info/SOURCES.txt'
running build
running build_py
copying om_aiv_util/socket_driver.py -> /home/omron/Omron_LD/build/om_aiv_util/build/lib/om_aiv_util
running install
running install_lib
copying /home/omron/Omron_LD/build/om_aiv_util/build/lib/om_aiv_util/socket_driver.py -> /home/omron/Omron_LD/install/om_aiv_util/lib/python3.8/site-packages/om_aiv_util
byte-compiling /home/omron/Omron_LD/install/om_aiv_util/lib/python3.8/site-packages/om_aiv_util/socket_driver.py to socket_driver.cpython-38.pyc
  File "/home/omron/Omron_LD/install/om_aiv_util/lib/python3.8/site-packages/om_aiv_util/socket_driver.py", line 225
    print "starting connection to", server_addr
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("starting connection to", server_addr)?

running install_data
running install_egg_info
removing '/home/omron/Omron_LD/install/om_aiv_util/lib/python3.8/site-packages/om_aiv_util-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/om_aiv_util/om_aiv_util.egg-info to /home/omron/Omron_LD/install/om_aiv_util/lib/python3.8/site-packages/om_aiv_util-0.0.0-py3.8.egg-info
running install_scripts
Installing arcl_api_server script to /home/omron/Omron_LD/install/om_aiv_util/lib/om_aiv_util
Installing ld_states_publisher script to /home/omron/Omron_LD/install/om_aiv_util/lib/om_aiv_util
writing list of installed files to '/home/omron/Omron_LD/build/om_aiv_util/install.log'
